@@ -6,3 +6,4 @@ Remove Distribution.getStandardMoment
 Drop deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors for 1.21
 Remove FunctionalChaosAlgorithm(Function) ctors for 1.21
 Remove FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
+Remove (Process)Sample::computeCenteredMoment
