@@ -220,7 +220,12 @@ Field ProcessSample::computeKurtosis() const
   return getImplementation()->computeKurtosis();
 }
 
-/* Gives the centered moment of order k of the sample (by component) */
+/* Gives the central moment of order k of the sample (by component) */
+Field ProcessSample::computeCentralMoment(const UnsignedInteger k) const
+{
+  return getImplementation()->computeCentralMoment(k);
+}
+
 Field ProcessSample::computeCenteredMoment(const UnsignedInteger k) const
 {
   return getImplementation()->computeCenteredMoment(k);
