@@ -259,15 +259,21 @@ Field ProcessSampleImplementation::computeKurtosis() const
 }
 
 /*
- * Gives the centered moment of order k of the sample (by component)
+ * Gives the central moment of order k of the sample (by component)
  */
-Field ProcessSampleImplementation::computeCenteredMoment(const UnsignedInteger k) const
+Field ProcessSampleImplementation::computeCentralMoment(const UnsignedInteger k) const
 {
   const UnsignedInteger verticesNumber = mesh_.getVerticesNumber();
   Sample values(verticesNumber, getDimension());
   for (UnsignedInteger i = 0; i < verticesNumber; ++i)
-    values[i] = getSampleAtVertex(i).computeCenteredMoment(k);
+    values[i] = getSampleAtVertex(i).computeCentralMoment(k);
   return Field(mesh_, values);
+}
+
+Field ProcessSampleImplementation::computeCenteredMoment(const UnsignedInteger k) const
+{
+  LOGWARN(OSS() << "ProcessSample::computeCenteredMoment is deprecated, use computeCentralMoment");
+  return computeCentralMoment(k);
 }
 
 /*
