@@ -129,7 +129,10 @@ public:
   /** Gives the kurtosis of the sample (by component) */
   Field computeKurtosis() const;
 
-  /** Gives the centered moment of order k of the sample (by component) */
+  /** Gives the central moment of order k of the sample (by component) */
+  Field computeCentralMoment(const UnsignedInteger k) const;
+  
+  /** @deprecated */
   Field computeCenteredMoment(const UnsignedInteger k) const;
 
   /** Gives the raw moment of order k of the sample (by component) */
