@@ -87,7 +87,7 @@ TestResult LinearModelTest::LinearModelFisher(const Sample & firstSample,
   // Sum of Squared Total (SST) = n * var(Y) or n * E(Y^2) depending on intercept
   Scalar SST = 1.0;
   if (hasIntercept)
-    SST = secondSample.computeCenteredMoment(2)[0] * size;
+    SST = secondSample.computeCentralMoment(2)[0] * size;
   else
     SST = secondSample.computeRawMoment(2)[0] * size;
   // Sum of Squared Model (SSM) = SST - SSE
