@@ -30,7 +30,7 @@ result = algo.getResult()
 metaModel = result.getMetaModel()
 conditionalCovariance = result.getCovarianceModel()
 residual = metaModel(X) - Y
-ott.assert_almost_equal(residual.computeCenteredMoment(2),
+ott.assert_almost_equal(residual.computeCentralMoment(2),
                         [1.06e-05], 1e-5, 1e-5)
 ott.assert_almost_equal(conditionalCovariance.getParameter(),
                         [0.619144, 0.000937], 5e-3, 1e-3)
