@@ -117,7 +117,7 @@ print('range=', processSample.computeRange().getValues())
 print('variance=', processSample.computeVariance().getValues())
 print('skewness=', processSample.computeSkewness().getValues())
 print('kurtosis=', processSample.computeKurtosis().getValues())
-print('centered moment (3)=', processSample.computeCenteredMoment(3).getValues())
+print('centered moment (3)=', processSample.computeCentralMoment(3).getValues())
 print('raw moment (3)=', processSample.computeRawMoment(3).getValues())
 x = [0.2]*processSample.getDimension()
 print('median=', processSample.computeMedian().getValues())
