@@ -27,6 +27,7 @@
  * Deprecated oldest LinearModelAlgorithm(X, basis, Y) and LinearModelStepwiseAlgorithm(X, basis, Y,...) ctors
  * Deprecated FunctionalChaos(Function, ...) ctors
  * Deprecated FunctionalChaosResult.getComposedModel, MetaModelResult.getModel
+ * Deprecated (Process)Sample::computeCenteredMoment in favor of computeCentralMoment
 
 === Documentation ===
  * Added example galleries at the end of API doc pages
